Bug 1917300 - create common input element test helpers r=reusable-components-reviewers,mstriemer
This patch factors out some common elements of our moz-checkbox and moz-radio tests into helpers that can be re-used and extended for future input element tests.

Differential Revision: https://phabricator.services.mozilla.com/D222341

UltraBlame original commit: 355963d4e13a21454ffda65f2edc6395d1c1cf4b

--- a/toolkit/content/tests/widgets/test_moz_radio_group.html
+++ b/toolkit/content/tests/widgets/test_moz_radio_group.html
@@ -22,8 +22,6 @@ utf
 <
 title
 >
-MozRadio
-and
 MozRadioGroup
 Tests
 <
@@ -139,10 +137,28 @@ css
 >
 <
 script
+src
+=
+"
+input
+-
+test
+-
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 >
 const
 {
-BrowserTestUtils
+TestUtils
 }
 =
 ChromeUtils
@@ -158,7 +174,7 @@ testing
 -
 common
 /
-BrowserTestUtils
+TestUtils
 .
 sys
 .
@@ -167,10 +183,16 @@ mjs
 )
 ;
 let
+testHelpers
+=
+new
+InputTestHelpers
+(
+)
+;
+let
+literal
 html
-render
-renderTarget
-defaultTemplate
 ;
 add_setup
 (
@@ -182,44 +204,19 @@ setup
 {
 (
 {
+literal
 html
-render
 }
 =
 await
-import
+testHelpers
+.
+setupLit
 (
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-vendor
-/
-lit
-.
-all
-.
-mjs
-"
 )
 )
 ;
-renderTarget
-=
-document
-.
-getElementById
-(
-"
-render
-"
-)
-;
+let
 defaultTemplate
 =
 html
@@ -317,22 +314,55 @@ radio
 group
 >
 ;
+await
+testHelpers
+.
+setupInputTests
+(
+literal
+moz
+-
+radio
+defaultTemplate
+)
+;
 }
 )
 ;
+/
+/
+Verify
+the
+radio
+group
+label
+.
+add_task
+(
 async
 function
-renderRadioElements
+testRadioGroupLabel
 (
-template
-=
-defaultTemplate
 )
 {
-render
-(
-template
+const
+TEST_LABEL
+=
+"
+Testing
+.
+.
+.
+"
+;
+let
 renderTarget
+=
+await
+testHelpers
+.
+renderInputElements
+(
 )
 ;
 let
@@ -351,74 +381,6 @@ group
 "
 )
 ;
-let
-radioButtons
-=
-renderTarget
-.
-querySelectorAll
-(
-"
-moz
--
-radio
-"
-)
-;
-await
-radioGroup
-.
-updateComplete
-;
-return
-{
-radioGroup
-radioButtons
-:
-[
-.
-.
-.
-radioButtons
-]
-}
-;
-}
-/
-/
-Verify
-label
-text
-.
-add_task
-(
-async
-function
-testRadioLabels
-(
-)
-{
-const
-TEST_LABEL
-=
-"
-Testing
-.
-.
-.
-"
-;
-let
-{
-radioGroup
-radioButtons
-}
-=
-await
-renderRadioElements
-(
-)
-;
 is
 (
 radioGroup
@@ -464,73 +426,6 @@ TEST_LABEL
 "
 Radio
 group
-label
-text
-is
-updated
-.
-"
-)
-;
-let
-firstRadioButton
-=
-radioButtons
-[
-0
-]
-;
-is
-(
-firstRadioButton
-.
-labelEl
-.
-innerText
-.
-trim
-(
-)
-"
-First
-"
-"
-Radio
-button
-label
-text
-is
-set
-.
-"
-)
-;
-firstRadioButton
-.
-label
-=
-TEST_LABEL
-;
-await
-firstRadioButton
-.
-updateComplete
-;
-is
-(
-firstRadioButton
-.
-labelEl
-.
-innerText
-.
-trim
-(
-)
-TEST_LABEL
-"
-Radio
-button
 label
 text
 is
@@ -587,14 +482,43 @@ two
 "
 ;
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
+)
+;
+let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
+radioButtons
+=
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
 )
 ;
 is
@@ -723,15 +647,49 @@ testChangeRadioButtonChecked
 )
 {
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
 )
+;
+let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
+radioButtons
+=
+[
+.
+.
+.
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
+]
 ;
 let
 [
@@ -1035,14 +993,29 @@ testChangeRadioGroupValue
 )
 {
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
+)
+;
+let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
 )
 ;
 let
@@ -1051,7 +1024,16 @@ firstButton
 thirdButton
 ]
 =
-radioButtons
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
 ;
 synthesizeMouseAtCenter
 (
@@ -1261,14 +1243,29 @@ updated
 ;
 }
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
+)
+;
+let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
 )
 ;
 let
@@ -1278,7 +1275,16 @@ secondButton
 thirdButton
 ]
 =
-radioButtons
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
 ;
 firstButton
 .
@@ -1740,25 +1746,49 @@ button
 >
 ;
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
 template
 )
 ;
 let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
 [
-firstRadioButton
-secondRadioButton
-thirdRadioButton
+firstButton
+secondButton
+thirdButton
 ]
 =
-radioButtons
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
 ;
 let
 [
@@ -1819,7 +1849,7 @@ is
 document
 .
 activeElement
-firstRadioButton
+firstButton
 "
 First
 radio
@@ -1838,8 +1868,8 @@ checked
 )
 ;
 [
-secondRadioButton
-thirdRadioButton
+secondButton
+thirdButton
 ]
 .
 forEach
@@ -1921,7 +1951,7 @@ is
 document
 .
 activeElement
-firstRadioButton
+firstButton
 "
 Focus
 moves
@@ -1949,7 +1979,7 @@ is
 document
 .
 activeElement
-secondRadioButton
+secondButton
 "
 Focus
 moves
@@ -1971,7 +2001,7 @@ is
 radioGroup
 .
 value
-secondRadioButton
+secondButton
 .
 value
 "
@@ -1988,7 +2018,7 @@ value
 "
 )
 ;
-secondRadioButton
+secondButton
 .
 checked
 =
@@ -2042,7 +2072,7 @@ is
 document
 .
 activeElement
-firstRadioButton
+firstButton
 "
 First
 radio
@@ -2066,13 +2096,13 @@ true
 }
 )
 ;
-firstRadioButton
+firstButton
 .
 disabled
 =
 true
 ;
-secondRadioButton
+secondButton
 .
 disabled
 =
@@ -2095,7 +2125,7 @@ is
 document
 .
 activeElement
-thirdRadioButton
+thirdButton
 "
 First
 non
@@ -2270,25 +2300,49 @@ button
 >
 ;
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
 disabledTemplate
 )
 ;
 let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
 [
-firstRadioButton
-secondRadioButton
-thirdRadioButton
+firstButton
+secondButton
+thirdButton
 ]
 =
-radioButtons
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
 ;
 let
 afterButton
@@ -2334,7 +2388,7 @@ is
 document
 .
 activeElement
-secondRadioButton
+secondButton
 "
 The
 second
@@ -2355,7 +2409,7 @@ disabled
 ;
 is
 (
-firstRadioButton
+firstButton
 .
 disabled
 true
@@ -2384,7 +2438,7 @@ is
 document
 .
 activeElement
-thirdRadioButton
+thirdButton
 "
 Focus
 should
@@ -2404,7 +2458,7 @@ updateComplete
 ;
 ok
 (
-thirdRadioButton
+thirdButton
 .
 checked
 "
@@ -2421,7 +2475,7 @@ is
 radioGroup
 .
 value
-thirdRadioButton
+thirdButton
 .
 value
 "
@@ -2477,7 +2531,7 @@ is
 document
 .
 activeElement
-thirdRadioButton
+thirdButton
 "
 Focus
 should
@@ -2514,14 +2568,43 @@ testRadioEvents
 )
 {
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
+)
+;
+let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
+radioButtons
+=
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
 )
 ;
 let
@@ -2534,188 +2617,17 @@ thirdButton
 radioButtons
 ;
 let
-seenEvents
-=
-[
-]
-;
-function
+{
 trackEvent
-(
-event
-)
-{
-seenEvents
-.
-push
-(
-{
-type
-:
-event
-.
-type
-value
-:
-event
-.
-target
-.
-value
-checked
-:
-event
-.
-target
-.
-checked
-localName
-:
-event
-.
-currentTarget
-.
-localName
-}
-)
-;
-}
-function
 verifyEvents
-(
-expectedEvents
-)
-{
-is
-(
-seenEvents
-.
-length
-expectedEvents
-.
-length
-"
-Radio
-elements
-emit
-the
-expected
-number
-of
-events
-.
-"
-)
-;
-expectedEvents
-.
-forEach
-(
-(
-eventInfo
-index
-)
+}
 =
->
-{
-let
-seenEventInfo
-=
-seenEvents
-[
-index
-]
-;
-is
+testHelpers
+.
+getInputEventHelpers
 (
-seenEventInfo
-.
-type
-eventInfo
-.
-type
-"
-Event
-type
-is
-correct
-.
-"
 )
 ;
-is
-(
-seenEventInfo
-.
-value
-eventInfo
-.
-value
-"
-Event
-target
-value
-is
-correct
-.
-"
-)
-;
-is
-(
-seenEventInfo
-.
-localName
-eventInfo
-.
-localName
-"
-Event
-is
-emitted
-from
-the
-correct
-element
-.
-"
-)
-;
-if
-(
-eventInfo
-.
-hasOwnProperty
-(
-"
-checked
-"
-)
-)
-{
-is
-(
-seenEventInfo
-.
-checked
-eventInfo
-.
-checked
-"
-Event
-checked
-state
-is
-correct
-.
-"
-)
-;
-}
-}
-)
-;
-}
 radioButtons
 .
 forEach
@@ -2805,17 +2717,10 @@ inputEl
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -2931,17 +2836,6 @@ group
 }
 ]
 )
-;
-/
-/
-Reset
-seen
-events
-.
-seenEvents
-=
-[
-]
 ;
 /
 /
@@ -2990,17 +2884,10 @@ updated
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -3119,17 +3006,6 @@ group
 ;
 /
 /
-Reset
-seen
-events
-.
-seenEvents
-=
-[
-]
-;
-/
-/
 Verify
 that
 changing
@@ -3175,17 +3051,10 @@ checked
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -3193,17 +3062,6 @@ verifyEvents
 [
 ]
 )
-;
-/
-/
-Reset
-seen
-events
-.
-seenEvents
-=
-[
-]
 ;
 /
 /
@@ -3254,17 +3112,10 @@ updated
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -3272,17 +3123,6 @@ verifyEvents
 [
 ]
 )
-;
-/
-/
-Reset
-seen
-events
-.
-seenEvents
-=
-[
-]
 ;
 /
 /
@@ -3298,8 +3138,6 @@ from
 disabled
 radio
 groups
-or
-buttons
 .
 radioGroup
 .
@@ -3322,17 +3160,10 @@ inputEl
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -3354,15 +3185,19 @@ updateComplete
 ;
 /
 /
-Reset
-seen
+Verify
+we
+don
+'
+t
+get
+any
 events
+from
+disabled
+radio
+buttons
 .
-seenEvents
-=
-[
-]
-;
 thirdButton
 .
 disabled
@@ -3381,17 +3216,10 @@ click
 )
 ;
 await
-new
-Promise
+TestUtils
+.
+waitForTick
 (
-r
-=
->
-setTimeout
-(
-r
-0
-)
 )
 ;
 verifyEvents
@@ -3410,140 +3238,6 @@ await
 radioGroup
 .
 updateComplete
-;
-}
-)
-;
-/
-/
-Verify
-setting
-iconSrc
-displays
-an
-icon
-in
-the
-radio
-button
-.
-add_task
-(
-async
-function
-testRadioButtonIcon
-(
-)
-{
-const
-ICON_SRC
-=
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-edit
--
-copy
-.
-svg
-"
-;
-let
-{
-radioButtons
-}
-=
-await
-renderRadioElements
-(
-)
-;
-let
-[
-firstRadioButton
-]
-=
-radioButtons
-;
-ok
-(
-!
-firstRadioButton
-.
-icon
-"
-No
-icon
-element
-present
-if
-iconSrc
-isn
-'
-t
-set
-.
-"
-)
-;
-firstRadioButton
-.
-iconSrc
-=
-ICON_SRC
-;
-await
-firstRadioButton
-.
-updateComplete
-;
-ok
-(
-firstRadioButton
-.
-icon
-"
-Radio
-button
-displays
-an
-icon
-.
-"
-)
-;
-is
-(
-firstRadioButton
-.
-icon
-.
-getAttribute
-(
-"
-src
-"
-)
-ICON_SRC
-"
-Radio
-button
-icon
-uses
-the
-expected
-source
-.
-"
-)
 ;
 }
 )
@@ -3587,19 +3281,48 @@ testDisablingRadioElements
 )
 {
 let
-{
-radioGroup
-radioButtons
-}
+renderTarget
 =
 await
-renderRadioElements
+testHelpers
+.
+renderInputElements
 (
 )
 ;
 let
+radioGroup
+=
+renderTarget
+.
+querySelector
+(
+"
+moz
+-
+radio
+-
+group
+"
+)
+;
+let
+radioButtons
+=
+renderTarget
+.
+querySelectorAll
+(
+"
+moz
+-
+radio
+"
+)
+;
+let
 [
-firstRadioButton
+firstButton
 .
 .
 .
@@ -3722,20 +3445,20 @@ radio
 button
 independently
 .
-firstRadioButton
+firstButton
 .
 disabled
 =
 true
 ;
 await
-firstRadioButton
+firstButton
 .
 updateComplete
 ;
 ok
 (
-firstRadioButton
+firstButton
 .
 inputEl
 .
@@ -3843,14 +3566,14 @@ group
 is
 disabled
 .
-firstRadioButton
+firstButton
 .
 disabled
 =
 false
 ;
 await
-firstRadioButton
+firstButton
 .
 updateComplete
 ;
@@ -3895,7 +3618,7 @@ updateComplete
 ;
 ok
 (
-firstRadioButton
+firstButton
 .
 inputEl
 .
@@ -3964,14 +3687,14 @@ radio
 button
 independently
 .
-firstRadioButton
+firstButton
 .
 disabled
 =
 false
 ;
 await
-firstRadioButton
+firstButton
 .
 updateComplete
 ;
@@ -3979,1230 +3702,6 @@ verifyElementStates
 (
 "
 enabled
-"
-)
-;
-}
-)
-;
-add_task
-(
-async
-function
-testButtonDescriptions
-(
-)
-{
-const
-ATTR_DESCRIPTION
-=
-"
-This
-description
-is
-set
-via
-an
-attribute
-.
-"
-const
-SLOTTED_DESCRIPTION
-=
-"
-This
-description
-is
-set
-via
-a
-slot
-.
-"
-let
-template
-=
-html
-<
-moz
--
-radio
--
-group
-name
-=
-"
-test
--
-name
-"
-label
-=
-"
-Radio
-group
-label
-"
->
-<
-moz
--
-radio
-checked
-value
-=
-"
-first
-"
-label
-=
-"
-First
-"
-description
-=
-{
-ATTR_DESCRIPTION
-}
->
-<
-/
-moz
--
-radio
->
-<
-moz
--
-radio
-value
-=
-"
-second
-"
-label
-=
-"
-Second
-"
->
-<
-span
-slot
-=
-"
-description
-"
->
-{
-SLOTTED_DESCRIPTION
-}
-<
-/
-span
->
-<
-/
-moz
--
-radio
->
-<
-moz
--
-radio
-checked
-value
-=
-"
-third
-"
-label
-=
-"
-Third
-"
-description
-=
-{
-ATTR_DESCRIPTION
-}
->
-<
-span
-slot
-=
-"
-description
-"
->
-{
-SLOTTED_DESCRIPTION
-}
-<
-/
-span
->
-<
-/
-moz
--
-radio
->
-<
-/
-moz
--
-radio
--
-group
->
-;
-let
-{
-radioButtons
-}
-=
-await
-renderRadioElements
-(
-template
-)
-;
-let
-[
-firstButton
-secondButton
-thirdButton
-]
-=
-radioButtons
-;
-is
-(
-firstButton
-.
-inputEl
-.
-getAttribute
-(
-"
-aria
--
-describedby
-"
-)
-"
-description
-"
-"
-Radio
-input
-is
-described
-by
-the
-description
-element
-.
-"
-)
-;
-is
-(
-firstButton
-.
-descriptionEl
-.
-innerText
-ATTR_DESCRIPTION
-"
-Description
-element
-has
-the
-expected
-text
-when
-set
-via
-an
-attribute
-.
-"
-)
-;
-is
-(
-secondButton
-.
-inputEl
-.
-getAttribute
-(
-"
-aria
--
-describedby
-"
-)
-"
-description
-"
-"
-Radio
-input
-is
-described
-by
-the
-description
-element
-.
-"
-)
-;
-let
-slottedText
-=
-secondButton
-.
-descriptionEl
-.
-querySelector
-(
-"
-slot
-[
-name
-=
-description
-]
-"
-)
-.
-assignedElements
-(
-)
-[
-0
-]
-.
-innerText
-;
-is
-(
-slottedText
-SLOTTED_DESCRIPTION
-"
-Description
-element
-has
-the
-expected
-text
-when
-set
-via
-a
-slot
-.
-"
-)
-;
-is
-(
-thirdButton
-.
-inputEl
-.
-getAttribute
-(
-"
-aria
--
-describedby
-"
-)
-"
-description
-"
-"
-Radio
-input
-is
-described
-by
-the
-description
-element
-.
-"
-)
-;
-is
-(
-thirdButton
-.
-descriptionEl
-.
-innerText
-ATTR_DESCRIPTION
-"
-Attribute
-text
-takes
-precedence
-over
-slotted
-text
-.
-"
-)
-;
-}
-)
-;
-add_task
-(
-async
-function
-testRadioButtonAccesskey
-(
-)
-{
-const
-UNIQUE_ACCESS_KEY
-=
-"
-F
-"
-;
-const
-SHARED_ACCESS_KEY
-=
-"
-d
-"
-let
-accessKeyTemplate
-=
-html
-<
-moz
--
-radio
--
-group
-name
-=
-"
-test
--
-name
-"
-label
-=
-"
-Radio
-group
-label
-"
->
-<
-moz
--
-radio
-value
-=
-"
-first
-"
-label
-=
-"
-First
-"
-accesskey
-=
-{
-UNIQUE_ACCESS_KEY
-}
->
-<
-/
-moz
--
-radio
->
-<
-moz
--
-radio
-checked
-value
-=
-"
-second
-"
-label
-=
-"
-Second
-"
-accesskey
-=
-{
-SHARED_ACCESS_KEY
-}
->
-<
-/
-moz
--
-radio
->
-<
-moz
--
-radio
-value
-=
-"
-third
-"
-label
-=
-"
-Third
-"
-accesskey
-=
-{
-SHARED_ACCESS_KEY
-}
->
-<
-/
-moz
--
-radio
->
-<
-/
-moz
--
-radio
--
-group
->
-;
-let
-{
-radioButtons
-}
-=
-await
-renderRadioElements
-(
-accessKeyTemplate
-)
-;
-let
-[
-firstRadio
-secondRadio
-thirdRadio
-]
-=
-radioButtons
-;
-/
-/
-Validate
-that
-activating
-a
-unique
-accesskey
-focuses
-and
-checks
-the
-radio
-input
-.
-firstRadio
-.
-blur
-(
-)
-;
-isnot
-(
-document
-.
-activeElement
-firstRadio
-"
-First
-radio
-button
-is
-not
-focused
-.
-"
-)
-;
-isnot
-(
-firstRadio
-.
-shadowRoot
-.
-activeElement
-firstRadio
-.
-inputEl
-"
-Radio
-input
-element
-is
-not
-focused
-.
-"
-)
-;
-ok
-(
-!
-firstRadio
-.
-checked
-"
-Radio
-button
-is
-not
-checked
-.
-"
-)
-;
-synthesizeKey
-(
-UNIQUE_ACCESS_KEY
-navigator
-.
-platform
-.
-includes
-(
-"
-Mac
-"
-)
-?
-{
-altKey
-:
-true
-ctrlKey
-:
-true
-}
-:
-{
-altKey
-:
-true
-shiftKey
-:
-true
-}
-)
-;
-is
-(
-document
-.
-activeElement
-firstRadio
-"
-Radio
-button
-recieves
-focus
-after
-accesskey
-is
-pressed
-.
-"
-)
-;
-is
-(
-firstRadio
-.
-shadowRoot
-.
-activeElement
-firstRadio
-.
-inputEl
-"
-Radio
-input
-element
-is
-focused
-after
-accesskey
-is
-pressed
-.
-"
-)
-;
-ok
-(
-firstRadio
-.
-checked
-"
-Radio
-button
-is
-checked
-after
-accesskey
-is
-pressed
-.
-"
-)
-;
-/
-/
-Validate
-that
-activating
-a
-shared
-accesskey
-toggles
-focus
-between
-inputs
-.
-synthesizeKey
-(
-SHARED_ACCESS_KEY
-navigator
-.
-platform
-.
-includes
-(
-"
-Mac
-"
-)
-?
-{
-altKey
-:
-true
-ctrlKey
-:
-true
-}
-:
-{
-altKey
-:
-true
-shiftKey
-:
-true
-}
-)
-;
-is
-(
-document
-.
-activeElement
-secondRadio
-"
-Focus
-moves
-to
-the
-radio
-button
-with
-the
-shared
-accesskey
-.
-"
-)
-;
-ok
-(
-!
-secondRadio
-.
-checked
-"
-Second
-radio
-button
-is
-not
-checked
-.
-"
-)
-;
-synthesizeKey
-(
-SHARED_ACCESS_KEY
-navigator
-.
-platform
-.
-includes
-(
-"
-Mac
-"
-)
-?
-{
-altKey
-:
-true
-ctrlKey
-:
-true
-}
-:
-{
-altKey
-:
-true
-shiftKey
-:
-true
-}
-)
-;
-is
-(
-document
-.
-activeElement
-thirdRadio
-"
-Focus
-cycles
-between
-radio
-buttons
-with
-the
-same
-accesskey
-.
-"
-)
-;
-ok
-(
-!
-thirdRadio
-.
-checked
-"
-Third
-radio
-button
-is
-not
-checked
-.
-"
-)
-;
-}
-)
-;
-add_task
-(
-async
-function
-testSupportLink
-(
-)
-{
-const
-LEARN_MORE_TEXT
-=
-"
-Learn
-more
-"
-let
-supportLinktempalte
-=
-html
-<
-moz
--
-radio
--
-group
-name
-=
-"
-test
--
-name
-"
-label
-=
-"
-Radio
-group
-label
-"
->
-<
-moz
--
-radio
-value
-=
-"
-first
-"
-label
-=
-"
-First
-"
-support
--
-page
-=
-"
-test
--
-page
-"
->
-<
-/
-moz
--
-radio
->
-<
-moz
--
-radio
-value
-=
-"
-third
-"
-label
-=
-"
-Second
-"
->
-<
-a
-slot
-=
-"
-support
--
-link
-"
-href
-=
-"
-www
-.
-example
-.
-com
-"
->
-Help
-me
-!
-<
-/
-a
->
-<
-/
-moz
--
-radio
->
-<
-/
-moz
--
-radio
--
-group
->
-;
-let
-{
-radioButtons
-}
-=
-await
-renderRadioElements
-(
-supportLinktempalte
-)
-;
-let
-[
-firstRadio
-secondRadio
-]
-=
-radioButtons
-;
-let
-supportLink
-=
-firstRadio
-.
-shadowRoot
-.
-querySelector
-(
-"
-a
-[
-is
-=
-moz
--
-support
--
-link
-]
-"
-)
-;
-/
-/
-Ensure
-translations
-have
-finished
-before
-checking
-label
-contents
-.
-await
-BrowserTestUtils
-.
-waitForMutationCondition
-(
-supportLink
-{
-childList
-:
-true
-}
-(
-)
-=
->
-supportLink
-.
-textContent
-.
-trim
-(
-)
-)
-;
-ok
-(
-supportLink
-"
-Support
-link
-is
-rendered
-when
-supportPage
-attribute
-is
-set
-.
-"
-)
-;
-ok
-(
-supportLink
-.
-href
-.
-includes
-(
-"
-test
--
-page
-"
-)
-"
-Support
-link
-href
-points
-to
-the
-expected
-SUMO
-page
-.
-"
-)
-;
-is
-(
-supportLink
-.
-innerText
-LEARN_MORE_TEXT
-"
-Support
-link
-uses
-the
-default
-label
-text
-.
-"
-)
-;
-let
-slottedSupportLink
-=
-secondRadio
-.
-shadowRoot
-.
-querySelector
-(
-"
-slot
-[
-name
-=
-support
--
-link
-]
-"
-)
-.
-assignedElements
-(
-)
-[
-0
-]
-;
-ok
-(
-slottedSupportLink
-"
-Links
-can
-also
-be
-rendered
-using
-the
-support
--
-link
-slot
-.
-"
-)
-;
-ok
-(
-slottedSupportLink
-.
-href
-.
-includes
-(
-"
-www
-.
-example
-.
-com
-"
-)
-"
-Slotted
-link
-uses
-the
-expected
-url
-.
-"
-)
-;
-is
-(
-slottedSupportLink
-.
-innerText
-"
-Help
-me
-!
-"
-"
-Slotted
-link
-uses
-non
--
-default
-label
-text
-.
 "
 )
 ;
@@ -5219,18 +3718,6 @@ head
 >
 <
 body
->
-<
-div
-id
-=
-"
-render
-"
->
-<
-/
-div
 >
 <
 /
