--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -1635,16 +1635,18 @@ toolbartabstop
 /
 >
 <
-hbox
+html
+:
+div
 id
 =
 "
 urlbar
 "
-flex
+popover
 =
 "
-1
+manual
 "
 context
 =
@@ -4980,7 +4982,9 @@ hbox
 >
 <
 /
-hbox
+html
+:
+div
 >
 <
 toolbartabstop
