Bug 1926055 part 1 - add "Unload Tab" to context menu r=tabbrowser-reviewers,fluent-reviewers,dao,bolsson
Also make sure to select another tab if unloading the currently selected
tab (or Firefox View if unloading all tabs in the window) and handle
multiselect.

Differential Revision: https://phabricator.services.mozilla.com/D226346

UltraBlame original commit: db41b497b1bee3d48b0e7cd95cdf702262b69748

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -454,6 +454,49 @@ menuitem
 id
 =
 "
+context_unloadTab
+"
+data
+-
+lazy
+-
+l10n
+-
+id
+=
+"
+tab
+-
+context
+-
+unload
+-
+n
+-
+tabs
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+tabCount
+"
+:
+1
+}
+'
+/
+>
+<
+menuitem
+id
+=
+"
 context_pinTab
 "
 data
