Bug 1925678 [wpt PR 48707] - [layout] block-in-inlines should stretch when justify-self is in use, a=testonly
Automatic update from web-platform-tests
[layout] block-in-inlines should stretch when justify-self is in use

Usually, justify-self causes an element to shrink-to-fit in the absence
of a preferred size. But we have to let an inline child of the justified
element stretch so that any of _its_ block children can still stretch to
the justified grandparent.

Fixed: 374034249
Change-Id: I17b7fa89d84a76eacff2d2e6448db1b7bfe46a32
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5942095
Reviewed-by: David Baron <dbaronchromium.org>
Commit-Queue: David Grogan <dgroganchromium.org>
Cr-Commit-Position: refs/heads/main{#1370819}

--

wpt-commits: 2ab788df7f0d2ee35d67511348ce5eb4162c12d5
wpt-pr: 48707

UltraBlame original commit: c78d5901cee8bce54beec3a1dd28564de523a128

--- a/testing/web-platform/tests/css/css-align/blocks/justify-self-block-in-inline.html
+++ b/testing/web-platform/tests/css/css-align/blocks/justify-self-block-in-inline.html
@@ -26,13 +26,34 @@ org
 css
 -
 align
--
-3
 /
 #
 justify
 -
-abspos
+self
+-
+property
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+crbug
+.
+com
+/
+374034249
 "
 >
 <
@@ -257,6 +278,71 @@ width
 inline
 -
 block
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+style
+=
+"
+width
+:
+100px
+;
+justify
+-
+self
+:
+left
+;
+"
+>
+<
+span
+>
+<
+div
+class
+=
+"
+block
+-
+in
+-
+inline
+"
+style
+=
+"
+height
+:
+100px
+;
+background
+:
+green
+;
+"
+data
+-
+expected
+-
+width
+=
+"
+100
+"
+>
+<
+/
+div
+>
 <
 /
 span
