Bug 1925803 [wpt PR 48715] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=281830, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=281830 (#48715)

--

wpt-commits: 5a9d9349a312e12a950d5f4703cd41609a06f242
wpt-pr: 48715

UltraBlame original commit: 26b22c57c1c2ee44e5bca8c16eeb4aa937b69b41

--- a/testing/web-platform/tests/scroll-animations/css/animation-timeline-computed.html
+++ b/testing/web-platform/tests/scroll-animations/css/animation-timeline-computed.html
@@ -1042,6 +1042,88 @@ y
 '
 )
 ;
+test_computed_value
+(
+'
+animation
+-
+timeline
+'
+'
+view
+(
+10
+%
+10px
+)
+'
+'
+view
+(
+10
+%
+10px
+)
+'
+)
+;
+test_computed_value
+(
+'
+animation
+-
+timeline
+'
+'
+view
+(
+auto
+calc
+(
+1
+%
++
+1px
+)
+)
+'
+)
+;
+test_computed_value
+(
+'
+animation
+-
+timeline
+'
+'
+view
+(
+2em
+calc
+(
+1
+%
++
+1em
+)
+)
+'
+'
+view
+(
+32px
+calc
+(
+1
+%
++
+16px
+)
+)
+'
+)
+;
 <
 /
 script
