--- a/testing/web-platform/tests/scroll-animations/css/animation-timeline-parsing.html
+++ b/testing/web-platform/tests/scroll-animations/css/animation-timeline-parsing.html
@@ -1185,6 +1185,28 @@ timeline
 '
 view
 (
+2em
+calc
+(
+1
+%
++
+1em
+)
+)
+'
+)
+;
+test_valid_value
+(
+'
+animation
+-
+timeline
+'
+'
+view
+(
 auto
 )
 '
