--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-not-ignore-nested-text-box-edge.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-not-ignore-nested-text-box-edge.html
@@ -6,20 +6,22 @@ html
 <
 title
 >
-Test
-choosing
+No
+need
+to
+consult
 the
-correct
+block
+container
+requesting
+the
+trim
+for
 text
 -
 box
 -
 edge
-value
-for
-requested
-trim
-metric
 <
 /
 title
@@ -55,7 +57,7 @@ text
 -
 box
 -
-edge
+trim
 "
 >
 <
@@ -89,37 +91,67 @@ text
 -
 box
 -
-trim
+edge
 "
 >
 <
-meta
-name
+link
+rel
 =
 "
-assert
+match
 "
-content
+href
 =
 "
 text
 -
 box
 -
-edge
-is
-an
-inherited
-property
-and
 trim
-metric
-should
-be
-used
-accordingly
+-
+not
+-
+ignore
+-
+nested
+-
+text
+-
+box
+-
+edge
+-
+ref
 .
+html
 "
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+fonts
+/
+ahem
+.
+css
+"
+/
 >
 <
 !
@@ -146,70 +178,32 @@ issues
 -
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-text
--
-box
--
-trim
--
-accumulation
--
-001
--
-ref
-.
-html
-"
->
-<
 style
 >
-import
-"
-support
-/
-TestMetricsFont
-.
-css
-"
-;
 .
 spacer
 {
+background
+:
+lightgray
+;
 block
 -
 size
 :
 100px
 ;
-background
-:
-lightgray
-;
 }
 .
-inner
+target
 {
 font
 :
-100px
+50px
 /
 2
-MetricsTestFont
+Ahem
 ;
-}
-.
-outer
-{
 text
 -
 box
@@ -218,47 +212,8 @@ trim
 :
 trim
 -
-start
+both
 ;
-text
--
-box
--
-edge
-:
-auto
-;
-}
-.
-middle
-{
-text
--
-box
--
-trim
-:
-trim
--
-end
-;
-text
--
-box
--
-edge
-:
-text
-alphabetic
-;
-}
-.
-inner
-:
-first
--
-child
-{
 text
 -
 box
@@ -271,10 +226,6 @@ alphabetic
 }
 .
 inner
-:
-last
--
-child
 {
 text
 -
@@ -282,8 +233,44 @@ box
 -
 edge
 :
-text
+auto
 ;
+/
+*
+auto
+keyword
+uses
+the
+value
+of
+line
+-
+fit
+-
+edge
+on
+the
+root
+inline
+box
+of
+the
+the
+affected
+line
+box
+interpreting
+leading
+(
+the
+initial
+value
+)
+as
+text
+.
+*
+/
 }
 <
 /
@@ -306,15 +293,7 @@ div
 class
 =
 "
-outer
-"
->
-<
-div
-class
-=
-"
-middle
+target
 "
 >
 <
@@ -325,38 +304,7 @@ class
 inner
 "
 >
-Ap
-x
-<
-/
-div
->
-<
-div
-class
-=
-"
-spacer
-"
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-inner
-"
->
-Ap
-x
-<
-/
-div
->
+ABC
 <
 /
 div
