Bug 1925897 [wpt PR 48723] - Implement a11y tree mapping for ElementInternals element relationships., a=testonly
Automatic update from web-platform-tests
Implement a11y tree mapping for ElementInternals element relationships.

Map element relationship properties (e.g. ariaLabelledByElements) set on ElementInternals through to the accessibility tree.

If the same property is set on both the element and its ElementInternals, properties set on the element take precedence.

Bug: 41469336
Change-Id: Ie5fca83aa647018b3f99454c51193e700a07fd5c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5836478
Reviewed-by: Aaron Leventhal <aleventhalchromium.org>
Reviewed-by: Mason Freed <masonfchromium.org>
Commit-Queue: Alice Boxhall <aliceigalia.com>
Cr-Commit-Position: refs/heads/main{#1371181}

--

wpt-commits: fb46659c1cf0f651def8f7f6a226d2a5dbc2f81f
wpt-pr: 48723

UltraBlame original commit: 731a4f472f0c9501e618b56b4bd15525eefab5da

--- a/testing/web-platform/tests/custom-elements/element-internals-aria-element-reflection.html
+++ b/testing/web-platform/tests/custom-elements/element-internals-aria-element-reflection.html
@@ -112,6 +112,61 @@ src
 /
 resources
 /
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
 testharness
 .
 js
@@ -841,6 +896,126 @@ crash
 "
 )
 ;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+custom
+=
+document
+.
+getElementById
+(
+'
+custom1
+'
+)
+;
+const
+label_before_labelledby_set
+=
+await
+test_driver
+.
+get_computed_label
+(
+custom
+)
+;
+assert_equals
+(
+label_before_labelledby_set
+"
+"
+"
+Before
+ariaLabelledByElements
+is
+set
+accessible
+label
+should
+be
+empty
+.
+"
+)
+;
+const
+labelledBy
+=
+document
+.
+getElementById
+(
+'
+labelledby
+'
+)
+;
+custom
+.
+i
+.
+ariaLabelledByElements
+=
+[
+labelledBy
+]
+;
+const
+label_after_labelledby_set
+=
+await
+test_driver
+.
+get_computed_label
+(
+custom
+)
+;
+assert_equals
+(
+label_after_labelledby_set
+"
+Labelled
+By
+"
+"
+After
+ariaLabelledByElements
+is
+set
+accessible
+label
+should
+be
+'
+Labelled
+by
+'
+"
+)
+;
+}
+"
+Setting
+ariaLabelledByElements
+should
+change
+the
+accessible
+name
+of
+the
+custom
+element
+"
+)
 <
 /
 script
@@ -1526,10 +1701,6 @@ elements
 "
 )
 ;
-<
-/
-script
->
 <
 /
 script
