Bug 1926024 [wpt PR 48733] - Update legacy-mrow-like-elements-001.html to expect display `block math', a=testonly
Automatic update from web-platform-tests
Update legacy-mrow-like-elements-001.html to expect display `block math'

Additionally update the test assert description to refer to the
computed display value rather than the attribute.

Bug: 372512083
Change-Id: I9e940e79a64482554f6132388b2566b7170a7671
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5941615
Reviewed-by: Frédéric Wang <fwangigalia.com>
Reviewed-by: Rob Buis <rbuisigalia.com>
Commit-Queue: Frédéric Wang <fwangigalia.com>
Cr-Commit-Position: refs/heads/main{#1371359}

--

wpt-commits: 35cc15e8cdbe624b1c44a6e87b1b4903b64c73e5
wpt-pr: 48733

UltraBlame original commit: 7e6677d5f6e031bfcd7c6f8625760623fae55f1c

--- a/testing/web-platform/tests/mathml/presentation-markup/mrow/legacy-mrow-like-elements-001.html
+++ b/testing/web-platform/tests/mathml/presentation-markup/mrow/legacy-mrow-like-elements-001.html
@@ -473,15 +473,20 @@ assert_equals
 (
 style
 "
+block
 math
 "
 "
 First
 child
 has
+computed
 display
-:
+value
+'
+block
 math
+'
 "
 )
 ;
@@ -498,9 +503,12 @@ none
 Other
 children
 have
+computed
 display
-:
+value
+'
 none
+'
 "
 )
 ;
