--- a/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
+++ b/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
@@ -879,6 +879,129 @@ handler
 "
 )
 ;
+test
+(
+t
+=
+>
+{
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+Script
+"
+"
+src
+"
+)
+"
+TrustedScriptURL
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+cript
+"
+"
+src
+"
+)
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+Script
+"
+"
+src
+"
+)
+"
+TrustedScriptURL
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+cript
+"
+"
+src
+"
+)
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+script
+"
+"
+Src
+"
+)
+"
+TrustedScriptURL
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+script
+"
+"
+rc
+"
+)
+null
+)
+;
+}
+"
+ASCII
+case
+-
+insensitivity
+of
+tag
+name
+and
+attribute
+parameters
+"
+)
+;
 <
 /
 script
