Bug 1917784 - Add WPT tests for elementNS parameter of `getPropertyType`. r=smaug
See https://github.com/w3c/trusted-types/issues/429

Differential Revision: https://phabricator.services.mozilla.com/D226122

UltraBlame original commit: 083738a702c573fbba522656703ca1e795504148

--- a/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
+++ b/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
@@ -56,6 +56,22 @@ js
 script
 >
 <
+script
+src
+=
+"
+support
+/
+namespaces
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -999,6 +1015,231 @@ name
 and
 attribute
 parameters
+"
+)
+;
+test
+(
+t
+=
+>
+{
+NSURI_ARRAY
+.
+forEach
+(
+elementNs
+=
+>
+{
+const
+emptyOrHTML
+=
+(
+elementNs
+=
+=
+=
+NSURI_EMPTY
+|
+|
+elementNs
+=
+=
+=
+NSURI_HTML
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+iframe
+"
+"
+srcdoc
+"
+elementNs
+)
+emptyOrHTML
+?
+"
+TrustedHTML
+"
+:
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+script
+"
+"
+innerText
+"
+elementNs
+)
+emptyOrHTML
+?
+"
+TrustedScript
+"
+:
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+script
+"
+"
+src
+"
+elementNs
+)
+emptyOrHTML
+?
+"
+TrustedScriptURL
+"
+:
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+script
+"
+"
+text
+"
+elementNs
+)
+emptyOrHTML
+?
+"
+TrustedScript
+"
+:
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+script
+"
+"
+textContent
+"
+elementNs
+)
+emptyOrHTML
+?
+"
+TrustedScript
+"
+:
+null
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+foo
+"
+"
+innerHTML
+"
+elementNs
+)
+"
+TrustedHTML
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+foo
+"
+"
+outerHTML
+"
+elementNs
+)
+"
+TrustedHTML
+"
+)
+;
+}
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getPropertyType
+(
+"
+iframe
+"
+"
+srcdoc
+"
+NSURI_HTML
+.
+toUpperCase
+(
+)
+)
+null
+"
+case
+-
+sensitiveness
+"
+)
+;
+}
+"
+getPropertyType
+with
+an
+explicit
+elementNs
+parameter
 "
 )
 ;
