Bug 1924877 [wpt PR 48630] - HTML: alpha and colorspace attribute, a=testonly
Automatic update from web-platform-tests
HTML: alpha and colorspace attribute

Context: https://github.com/whatwg/html/pull/10456.
--

wpt-commits: 05ae498a46fd05d85b867fb1457df94a10dc4bb4
wpt-pr: 48630

UltraBlame original commit: 06d7abee782615e4157d49038cff514193ae06cc

--- a/testing/web-platform/tests/html/semantics/forms/the-input-element/color.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-input-element/color.tentative.html
@@ -4,6 +4,28 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+This
+test
+can
+be
+removed
+once
+all
+browsers
+support
+the
+alpha
+and
+colorspace
+attributes
+.
+-
+-
+>
+<
 meta
 charset
 =
