Bug 1921460 - Update image and text on "no network" error page r=pollymce,android-reviewers
[[ https://www.figma.com/design/yawrXicozZQ2zvLYsjdQBb/Error-Pages?node-id=4703-5667&node-type=instance&m=dev | Figma reference ]]

Replacing "No Internet" error page's text and image in low_and_medium_risk_error_pages.html. Using lowMediumErrorPages.js to style the new layout to match figma.

Differential Revision: https://phabricator.services.mozilla.com/D223952

UltraBlame original commit: de72e3d60c7c7b140827b38ad945a16612c912dd

--- a/mobile/android/fenix/app/src/main/assets/low_and_medium_risk_error_pages.html
+++ b/mobile/android/fenix/app/src/main/assets/low_and_medium_risk_error_pages.html
@@ -269,6 +269,14 @@ Image
 -
 >
 <
+div
+id
+=
+"
+imageContainer
+"
+>
+<
 iframe
 id
 =
@@ -288,6 +296,10 @@ frameborder
 <
 /
 iframe
+>
+<
+/
+div
 >
 <
 !
@@ -359,6 +371,30 @@ errorShortDesc
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+errorLinkContent
+"
+>
+<
+a
+id
+=
+"
+errorCode
+"
+>
+<
+/
+a
 >
 <
 /
