Bug 1917783 - Add WPT test for getAttributeType() with qualified attribute name. r=smaug
See https://github.com/w3c/trusted-types/issues/496#issuecomment-2428834747

Differential Revision: https://phabricator.services.mozilla.com/D226476

UltraBlame original commit: aba2bd9d817f21ac8a590235dc6635861aea19eb

--- a/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
+++ b/testing/web-platform/tests/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html
@@ -1464,6 +1464,78 @@ parameters
 "
 )
 ;
+test
+(
+t
+=
+>
+{
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+script
+"
+"
+href
+"
+NSURI_SVG
+NSURI_XLINK
+)
+"
+TrustedScriptURL
+"
+"
+local
+name
+'
+href
+'
+"
+)
+;
+assert_equals
+(
+trustedTypes
+.
+getAttributeType
+(
+"
+script
+"
+"
+xlink
+:
+href
+"
+NSURI_SVG
+NSURI_XLINK
+)
+null
+"
+qualified
+name
+'
+xlink
+:
+href
+'
+"
+)
+;
+}
+"
+getAttributeType
+with
+qualified
+attribute
+name
+"
+)
+;
 <
 /
 script
