Bug 1925607 [wpt PR 48699] - Improve select-parsing test readability, a=testonly
Automatic update from web-platform-tests
Improve select-parsing test readability

It was recommended here to use trim() to make these test cases more
readable:
https://chromium-review.googlesource.com/c/chromium/src/+/5936092/comment/051341cb_4c94e057/

Change-Id: I532b08bef1a7f04e4be3325d2ed3769d7ed564b9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5939523
Reviewed-by: Mason Freed <masonfchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1371467}

--

wpt-commits: a4d34f32471d59ceb4dd61e8514e587a0f965d2b
wpt-pr: 48699

UltraBlame original commit: 2bbbd5f794ec3e278e8d89502772640d91992ef4

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html
@@ -346,6 +346,10 @@ s1
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 div
 >
@@ -460,6 +464,10 @@ s2
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 button
 >
@@ -521,6 +529,10 @@ s3
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 datalist
 >
@@ -582,6 +594,10 @@ s4
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 button
 >
@@ -650,6 +666,10 @@ s5
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 button
 >
@@ -727,6 +747,10 @@ s6
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 div
 >
@@ -806,6 +830,10 @@ s7
 )
 .
 innerHTML
+.
+trim
+(
+)
 <
 input
 >
